# rt

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  doxygen.config  scene.json
cmake/modules/: FindJSONCPP.cmake
includes/: Camera.hh  CameraRay.hh  Color.hh  Exceptions.hh  FlatTexture.hh  Intersection.hh  Light.hh  Mesh.hh  Object.hh  Plane.hh  PointLight.hh  RotMatrix.hh  Scene.hh
src/: AlgorythmTexture.hh  Camera.cpp  Camera.hh  CameraRay.cpp  CameraRay.hh  Color.cpp  Color.hh  ColorTexture.cpp  ColorTexture.hh  Coordinates.hpp  DamierTexture.cpp  DamierTexture.hh  Exceptions.cpp  Exceptions.hh  Intersection.cpp  Intersection.hh  Light.cpp  Light.hh  Mesh.cpp  Mesh.hh  Noise.hh  Object.cpp  Object.hh  Plane.cpp  Plane.hh  PointLight.cpp  Ray.cpp  Ray.hh  RotMatrix.cpp  Scene.cpp  Scene.hh  Solver.cpp  Solver.hh  Solver1.cpp  Solver1.hh  Solver2.cpp  Solver2.hh  Solvers.hh  Sphere.cpp  Sphere.hh  (+6 more)
